welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:21: error: Int does not take parameters
         compteur(); 
                 ^